--- a/src/global.css
+++ b/src/global.css
@@ -1,5 +1,6 @@
 :root {
-	--background-color: #1e1e1e;
+	--global-background-color: #2a2a2a; /* Slightly lighter background color */
+	--app-background-color: #1e1e1e; /* Darker background color for the app */
 	--text-color: #e0e0e0;
 	--primary-color: #28a745;
 	--primary-hover-color: #218838;
@@ -11,7 +12,7 @@
 
 html,
 body {
-	background-color: var(--background-color);
+	background-color: var(--global-background-color);
 	color: var(--text-color);
 	margin: 0;
 	padding: 0;
